--- a/bolas.css
+++ b/bolas.css
@@ -15,10 +15,9 @@ html, body {
   h1 {
     font-size: 2rem;
     letter-spacing: -1px;
-    position: absolute;
+    position: fixed;
     margin: 0;
-    top: -4px;
-    right: 5px;
+    top: 20px;
   
     color: transparent;
     text-shadow: 0 0 4px white;
